Revert "First commit prog JS"

--- a/cadastro.html
+++ b/cadastro.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,17 +14,22 @@
       </div>
     </header>
 
-    <main class="container text-center content d-flex flex-column justify-content-evenly align-items-center
-    ">
+    <main class="container text-center content d-flex flex-column justify-content-center align-items-center
+    " style="gap: 40px;">
         <div>
-          <h1>A maior Newsletter Tech do Brasil</h1>
-          <p>Para você ficar atualizado sobre o mundo de tecnologia e negócios.</p>
+          <h2>Opaa! Falta pouco...</h2>
+        </div>
+        <div class=" d-flex flex-column col-sm-6" style="gap: 20px">
+          <input type="text" placeholder="Nome Completo" class="form-control">
+          <input type="email" placeholder="email@email.com" class="form-control">
+          <input type="text" placeholder="Tel. (12) 34566-6789" class="form-control">
         </div>
         <div>
-          <a class="btn" href="./cadastro.html">Inscreva-se</a>
+          <a class="btn" href="./confirmacao.html">Assinar</a>
         </div>
         <div>
-          <p>Toda Segunda-Feira, às 7h , nós mandamos por e-mail as </br>melhores noticias de negócios em tecnologia.</p>
+          <p>Cadastre-se para garantir acesso a tudo <br/>
+          que você precisa saber pra começar a semana bem e informado</p>
         </div>
     </main>
 
