--- a/confirmacao.html
+++ b/confirmacao.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,18 +14,18 @@
       </div>
     </header>
 
-    <main class="container text-center content d-flex flex-column justify-content-evenly align-items-center
+    <main class="container text-center content d-flex flex-column justify-content-center align-items-center
     ">
-        <div>
-          <h1>A maior Newsletter Tech do Brasil</h1>
-          <p>Para você ficar atualizado sobre o mundo de tecnologia e negócios.</p>
+        <div style="margin-bottom: 45px;">
+          <img src="./assets/check.png" alt="check ok" style="width: 120px; margin-bottom: 15px;">
+          <h2>Aeee tudo Pronto!</h2>
         </div>
         <div>
-          <a class="btn" href="./cadastro.html">Inscreva-se</a>
+          <h2>Agora você é um de nós...</h2>
+          <p>Grupo seleto que fica por dentro das novidades <br/>
+            da sua área de atuação, aliando praticidade e qualidade.</p>
         </div>
-        <div>
-          <p>Toda Segunda-Feira, às 7h , nós mandamos por e-mail as </br>melhores noticias de negócios em tecnologia.</p>
-        </div>
+        
     </main>
 
     <footer class="container-fluid bg-header-footer d-flex align-items-center card-footer">
