Create button new subject

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <section class="section-wrapper">
       <header class="section-header">
         <h1 class="section-header__title">Disciplina</h1>
+        <button class="button button--success" onclick="createSubject()">Nova Disciplina</button>
       </header>
       <div class="subject-list">
         <div class="subject-card">
