Create button Apagar e Editar subject

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
             <li>Status <span class="tag tag--danger">Obrigatória</span></li>
           </ul>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <br>
+          <div style="text-align: end;">
+            <button class="button button--danger" onclick="">Apagar</button>
+            <button class="button button--success" onclick="">Editar</button>
+          </div>
         </div>
 
         <div class="subject-card">
