--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <section class="section-wrapper">
       <header class="section-header">
         <h1 class="section-header__title">Disciplina</h1>
-        <button class="button button--success" onclick="createSubject()">Nova Disciplina</button>
+        <button class="button button--success" onclick="openSubjectModal()">Nova Disciplina</button>
       </header>
       <div class="subject-list">
         <div class="subject-card">
@@ -128,6 +128,42 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
+      <dialog class="modal" id="subject-modal">
+        <div class="modal__container">
+          <header class="modal__header">
+            <h3 id="subject-modal-title">Nova Disciplina</h3>
+          </header>
+          <form id="subject-form" class="modal__form">
+            <fieldset>
+              <label for="disciplina">Nome da disciplina</label>
+              <input type="text" placeholder="Digite o nome da disciplina" name="disciplina" id="disciplina">
+              
+              <label for="carga">Carga Horária</label>
+              <input type="text" placeholder="Digite a carga horária" name="carga" id="carga">
+
+              <label for="professor">Nome do Professor</label>
+              <input type="text" placeholder="Digite o nome do Professor" name="professor" id="professor">
+              
+              <label>Selecione o Status</label>
+              <select name="status" id="status">
+                <option value="">Selecione o Statos</option>
+                <option value="obrigatoria">Obrigatória</option>
+                <option value="opcional">Opcional</option>
+              </select>
+
+              <label for="observacoes">Observações</label>
+              <textarea type="text" placeholder="Digite as observações sobre a disciplina" name="observacoes" id="observacoes" rows="4"></textarea>
+
+            </fieldset>
+            <div class="modal__form-buttons">
+              <button class="button button--danger" type="reset" onclick="closeSubjectModal()">
+                Cancelar
+              </button>
+              <button class="button button--success" type="submit" id="save-subject">Criar</button>
+            </div>
+          </form>
+        </div>
+      </dialog>
     </section>
   </main>
   <footer class="footer">
