--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
     <section class="section-wrapper">
       <header class="section-header">
         <h1 class="section-header__title">Disciplina</h1>
-        <button class="button button--success" onclick="openSubjectModal()">Nova Disciplina</button>
+        <button class="button button--success" onclick="createSubject()">Nova Disciplina</button>
       </header>
       <div class="subject-list">
-        <div class="subject-card">
+        <!-- <div class="subject-card">
           <h3 class="subject-card__title">Nome da disciplina</h3>
           <hr />
           <ul class="subject-card__list">
@@ -104,29 +104,8 @@
             <button class="button button--danger" onclick="">Apagar</button>
             <button class="button button--success" onclick="">Editar</button>
           </div>
-        </div>
+        </div> -->
 
-        <div class="subject-card">
-          <h3 class="subject-card__title">Nome da disciplina</h3>
-          <hr />
-          <ul class="subject-card__list">
-            <li>carga horária: 16h</li>
-            <li>Professor: Pessoa da Silva</li>
-            <li>Status <span class="tag tag--success">Opcional</span></li>
-          </ul>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        </div>
-
-        <div class="subject-card">
-          <h3 class="subject-card__title">Nome da disciplina</h3>
-          <hr />
-          <ul class="subject-card__list">
-            <li>carga horária: 16h</li>
-            <li>Professor: Pessoa da Silva</li>
-            <li>Status <span class="tag tag--success">Opcional</span></li>
-          </ul>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
       </div>
       <dialog class="modal" id="subject-modal">
         <div class="modal__container">
@@ -136,10 +115,10 @@
           <form id="subject-form" class="modal__form">
             <fieldset>
               <label for="disciplina">Nome da disciplina</label>
-              <input type="text" placeholder="Digite o nome da disciplina" name="disciplina" id="disciplina">
+              <input type="text" placeholder="Digite o nome da disciplina" name="nome" id="disciplina">
               
               <label for="carga">Carga Horária</label>
-              <input type="text" placeholder="Digite a carga horária" name="carga" id="carga">
+              <input type="text" placeholder="Digite a carga horária" name="cargaHoraria" id="carga">
 
               <label for="professor">Nome do Professor</label>
               <input type="text" placeholder="Digite o nome do Professor" name="professor" id="professor">
@@ -147,12 +126,12 @@
               <label>Selecione o Status</label>
               <select name="status" id="status">
                 <option value="">Selecione o Statos</option>
-                <option value="obrigatoria">Obrigatória</option>
-                <option value="opcional">Opcional</option>
+                <option value="Obrigatória">Obrigatória</option>
+                <option value="Opcional">Opcional</option>
               </select>
 
               <label for="observacoes">Observações</label>
-              <textarea type="text" placeholder="Digite as observações sobre a disciplina" name="observacoes" id="observacoes" rows="4"></textarea>
+              <textarea type="text" placeholder="Digite as observações sobre a disciplina" name="observacos" id="observacoes" rows="4"></textarea>
 
             </fieldset>
             <div class="modal__form-buttons">
