--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <option value="Sistemas para internet">Sistemas para internet</option>
                 <option value="Redes">Redes</option>
               </select>
-              <span class="span-valid" style="color: red; display: none;">*** Todos os campos são obrigatórios, tente novamente.</span>
+              <span class="student-span-invalid" style="color: red;"></span>
             </fieldset>
             <div class="modal__form-buttons">
               <button class="button button--danger" type="reset" onclick="closeStudentModal()">
@@ -116,23 +116,25 @@
           <form id="subject-form" class="modal__form">
             <fieldset>
               <label for="disciplina">Nome da disciplina</label>
-              <input type="text" placeholder="Digite o nome da disciplina" name="nome" id="disciplina">
+              <input type="text" placeholder="Digite o nome da disciplina" name="nome" id="disciplina" class="subjectRequired">
               
               <label for="carga">Carga Horária</label>
-              <input type="text" placeholder="Digite a carga horária" name="cargaHoraria" id="carga">
+              <input type="text" placeholder="Digite a carga horária" name="cargaHoraria" id="carga" class="subjectRequired">
 
               <label for="professor">Nome do Professor</label>
-              <input type="text" placeholder="Digite o nome do Professor" name="professor" id="professor">
+              <input type="text" placeholder="Digite o nome do Professor" name="professor" id="professor" class="subjectRequired">
               
               <label>Selecione o Status</label>
-              <select name="status" id="status">
+              <select name="status" id="status" class="subjectRequired">
                 <option value="">Selecione o Statos</option>
                 <option value="Obrigatória">Obrigatória</option>
                 <option value="Opcional">Opcional</option>
               </select>
 
               <label for="observacoes">Observações</label>
-              <textarea type="text" placeholder="Digite as observações sobre a disciplina" name="observacos" id="observacoes" rows="4"></textarea>
+              <textarea type="text" placeholder="Digite as observações sobre a disciplina" name="observacos" id="observacoes" rows="4" class="subjectRequired"></textarea>
+
+              <span class="subject-span-invalid" style="color: red;"></span>
 
             </fieldset>
             <div class="modal__form-buttons">
